--- a/addtohomescreen/manifest.json
+++ b/addtohomescreen/manifest.json
@@ -37,5 +37,5 @@
   ],
   "name": "DS-PWA",
   "short_name": "DS-PWA",
-   "start_url": "https://developersahab.github.io/pwa/addtohomescreen/"
+   "start_url": "/"
 }
