--- a/addtohomescreen/manifest.json
+++ b/addtohomescreen/manifest.json
@@ -37,5 +37,5 @@
   ],
   "name": "DS-PWA",
   "short_name": "DS-PWA",
-   "start_url": "/?homescreen=1"
+   "start_url": "/pwa-examples/a2hs/?homescreen=1"
 }
